--- a/index.html
+++ b/index.html
@@ -3,4 +3,17 @@
 	<head>
 		<title>Project Nine Audio</title>
 	</head>
+	<body>		
+			<header id="header">
+				<div class="inner">
+					<a href="index.html" class="logo">Tony Teaches Tech</a>
+					<nav id="nav">
+						<a href="index.html">Like</a>
+						<a href="generic.html">Comment</a>
+						<a href="elements.html">Subscribe</a>
+					</nav>
+					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+				</div>
+			</header>
+	</body>
 </html>
