--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Project Nine Audio</title>
-	</head>
+    <meta charset="UTF-8">
+    <title>HTML5 Audio Player</title>
+    <style>
+        #playlist{
+            list-style: none;
+        }
+        #playlist li a{
+            color:black;
+            text-decoration: none;
+        }
+        #playlist .current-song a{
+            color:blue;
+        }
+    </style>
 	<body>
 	    <audio src="" controls id="audioPlayer">
 	        Sorry, your browser doesn't support html5!
