--- a/index.html
+++ b/index.html
@@ -1,34 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-    <meta charset="UTF-8">
-    <title>HTML5 Audio Player</title>
-    <style>
-        #playlist{
-            list-style: none;
-        }
-        #playlist li a{
-            color:black;
-            text-decoration: none;
-        }
-        #playlist .current-song a{
-            color:blue;
-        }
-    </style>
-	<body>
-	    <audio src="" controls id="audioPlayer">
-	        Sorry, your browser doesn't support html5!
-	    </audio>
-	    <ul id="playlist">
-	        <li class="current-song"><a href="Exit%20the%20Premises.mp3">Exit the Premises</a></li>
-	        <li><a href="Severe%20Tire%20Damage.mp3">Severe Tire Damage</a></li>
-  	      <li><a href="Broken%20Reality.mp3">Broken Reality</a></li>
-  	  </ul>
- 	   <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
-  	  <script src="audioPlayer.js"></script>
-  	  <script>
-   	     // loads the audio player
-  	      audioPlayer();
-  	  </script>
-	</body>
+		<title>Project Nine Audio</title>
+	</head>
 </html>
