--- a/index.html
+++ b/index.html
@@ -2,5 +2,77 @@
 <html>
 	<head>
 		<title>Project Nine Audio</title>
+		
+		 <script src="static/player.js"></script>
 	</head>
+	 <body>
+   <div class="wrapper">
+    <div id="idk"> 
+      Keep this in the background to hear audio
+    </div>
+    <div id="title-text"> 
+      Waiting...
+    </div>
+    </div>
+    <div id="test">
+    </div>
+    <audio id="music">
+      <source id="src" src="https://Project-YouTubeAudio.superderp111.repl.co/audio">
+    </audio>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+        #overlay {
+            position: fixed;
+            display: block;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.65);
+            z-index: 2;
+            cursor: pointer;
+        }
+
+        #overlayText {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            font-size: 40px;
+            color: white;
+            transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+        }
+
+        * {
+            font-family: "Rubik", sans-serif;
+        }
+
+        .wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column-reverse;
+            height: 100vh;
+        }
+
+        #title-text {
+            font-size: 30px;
+        }
+
+        #idk {
+            font-size: 20px;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        
+    </style>
+    <div id="overlay" onclick="overlayOff()">
+      <div id="overlayText"><p><b>Click to allow audio.</b></p></div>
+    </div>
+  </body>
 </html>
