--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="test">
     </div>
     <audio id="music">
-      <source id="src" src="https://Project-YouTubeAudio.superderp111.repl.co/audio">
+      <source id="src" src="https://nineofgaming.github.io/Project-Nine-Audio/audio">
     </audio>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
