--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <div id="overlayText"><p><b>Click to allow audio.</b></p></div>
     </div>
 	<script>
-	function overlayOff() {
-	  document.getElementById("overlay").innerHTML = "YOU CLICKED ME!";
+	function myFunction() {
+ 	 document.getElementById("overlay").remove();
 	}
 	</script>
 	</body>
