--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     </div>
 	<script>
 	function myFunction() {
- 	 document.getElementById("overlay").remove();
+ 	const element = document.getElementById("overlay").remove();
+	element.remove();
 	}
 	</script>
 	</body>
