--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div id="overlayText"><p><b>Click to allow audio.</b></p></div>
     </div>
 	<script>
-	function myFunction() {
+	function overlayOff() {
  	const element = document.getElementById("overlay").remove();
 	element.remove();
 	}
