--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 	function overlayOff() {
  	const element = document.getElementById("overlay").remove();
 	element.remove();
+	document.getElementById("title-text").innerHTML = "Connected";
 	}
 	</script>
 	</body>
