--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
  		const element = document.getElementById("overlay").remove();
 		element.remove();
 		document.getElementById("title-text").innerHTML = "Connected";
+		console.log("test");
 	}
 	</script>
 	</body>
