--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 	<script>
 	function overlayOff() {
  		const element = document.getElementById("overlay").remove();
-		document.getElementById("title-text").innerHTML = "Connected";
-		console.log("test");
+		document.getElementById("title-text").innerHTML = "Connected!";
 		element.remove();
 	}
 	</script>
