--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Project Nine Audio</title>
 		
-		 <script src="static/player.js"></script>
+		 <script src="player.js"></script>
 	</head>
 	 <body>
    <div class="wrapper">
